--- a/app/src/main/res/layout/fragment_unfinished.xml
+++ b/app/src/main/res/layout/fragment_unfinished.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rcv_unfinished"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
