--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,15 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="OrderListTvBig">
+        <item name="android:textSize">16sp</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:layout_marginTop">10dp</item>
+    </style>
+
+    <style name="OrderListTvNormal">
+        <item name="android:textSize">14sp</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:layout_marginTop">10dp</item>
+    </style>
 </resources>
