--- a/app/src/main/res/layout/item_order_detail.xml
+++ b/app/src/main/res/layout/item_order_detail.xml
@@ -10,7 +10,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="wrap_content"
         android:onClick="@{order.onContainerClick}"
         android:padding="15dp">
 
@@ -54,6 +54,24 @@
                 android:layout_height="wrap_content"
                 android:text="@{order.weichatStr}" />
 
+            <!--订单-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    style="@style/OrderListTvNormal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="订单：" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rcv_goods"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+            </LinearLayout>
             <!--合计-->
             <LinearLayout
                 android:layout_width="match_parent"
