--- a/app/src/main/res/layout/item_order_detail.xml
+++ b/app/src/main/res/layout/item_order_detail.xml
@@ -117,11 +117,33 @@
                 android:text="@{order.remarkStr}" />
         </LinearLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_below="@+id/ll_detail"
+            android:background="@color/splitLine" />
+
+        <!--订单状态-->
+
+        <TextView
+            style="@style/OrderListTvNormal"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/ll_detail"
+            android:layout_margin="5dp"
+            android:gravity="center"
+            android:text="@{order.statusStr}"
+            android:visibility="@{order.stateTvVisibility}" />
+
+        <!--订单处理按钮-->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="60dp"
             android:layout_below="@+id/ll_detail"
-            android:orientation="horizontal">
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:visibility="@{order.controlLlVisibility}">
 
             <View
                 android:layout_width="0dp"
@@ -130,7 +152,7 @@
 
             <Button
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="2"
                 android:onClick="@{order.onInvalidOrder}"
@@ -138,7 +160,7 @@
 
             <Button
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="2"
                 android:onClick="@{order.onFinishOrder}"
