--- a/app/src/main/res/layout/fragment_unfinished.xml
+++ b/app/src/main/res/layout/fragment_unfinished.xml
@@ -6,6 +6,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rcv_unfinished"
+        android:tag="rcv_data_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
