--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
         app:rippleColor="@color/colorPrimaryDark" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_main"
+        android:id="@+id/fab_scroll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
