--- a/app/src/main/res/layout/item_order_goods.xml
+++ b/app/src/main/res/layout/item_order_goods.xml
@@ -17,7 +17,8 @@
             style="@style/OrderListTvNormal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_weight="4"
+            android:ellipsize="end"
             android:lines="1"
             android:text="@{goods.goodsName}" />
 
@@ -25,15 +26,17 @@
             style="@style/OrderListTvNormal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:lines="1"
-            android:layout_marginRight="10dp"
             android:text="@{goods.goodsCountStr}" />
 
         <TextView
             style="@style/OrderListTvNormal"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1.5"
+            android:gravity="right"
             android:lines="1"
             android:text="@{goods.goodsPriceStr}" />
     </LinearLayout>
